--- a/FIGMMA/src/main/resources/templates/athlete/athleteList.html
+++ b/FIGMMA/src/main/resources/templates/athlete/athleteList.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="~{fragments/base :: head(title=Atleti)}">Atleti</head>
 
 <body>
 	<nav th:replace="~{fragments/base :: navbar}"></nav>
-	
+
 	<!--Dropdown per il filtraggio della ricerca-->
 	<div class="container text-center">
 		<div class="row align-items-start">
@@ -23,7 +24,8 @@
 										</select>
 									</div>
 									<div class="col-md-4">
-										<input class="form-control" placeholder="Es. Marco, Rossi, force" required type="text" th:value="${attribute}" name="attribute"/>
+										<input class="form-control" placeholder="Es. Marco, Rossi, force" required
+											type="text" th:value="${attribute}" name="attribute" />
 									</div>
 									<div class="col-md-4">
 										<button type="submit" class="btn btn-primary">Cerca</button>
@@ -39,10 +41,10 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div th:if="${athletes.isEmpty()}">Non ci sono atleti nel sistema</div>
-	
-	<!--Inizio delle card-->	
+
+	<!--Inizio delle card-->
 	<div class="container text-center">
 		<div class="row">
 			<div class="col mb-4 d-flex justify-content-center" th:each="athlete : ${athletes}">
@@ -63,7 +65,8 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<footer th:replace="~{fragments/base :: footer}"></footer>
 </body>
+
 </html>
