--- a/FIGMMA/src/main/resources/templates/auth/registerForm.html
+++ b/FIGMMA/src/main/resources/templates/auth/registerForm.html
@@ -1,90 +1,98 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="~{fragments/base :: head(title=Registrazione)}">Registrazione</head>
 
 <body>
 	<nav th:replace="~{fragments/base :: navbar}"></nav>
-	
-		<div class="d-flex container justify-content-center mt-4">
-			<div class="col-6 card border border-primary p-3 shadow" >
-				<h3 class="card-title m-2 d-flex justify-content-center">Sign up</h3>
-				
-				<!--Inizio della form-->			
-				<form th:action="@{/register}" method="post" class="m-3">
-					
-					<!--Controllo se ci sono problemi-->
-					<div th:object="${credentials}">
-						<div th:if="${#fields.hasGlobalErrors()}">
-							<p class="badge text-bg-danger my-2" th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p> 
-						</div>
+
+	<div class="d-flex container justify-content-center mt-4">
+		<div class="col-6 card border border-primary p-3 shadow">
+			<h3 class="card-title m-2 d-flex justify-content-center">Sign up</h3>
+
+			<!--Inizio della form-->
+			<form th:action="@{/register}" method="post" class="m-3">
+
+				<!--Controllo se ci sono problemi-->
+				<div th:object="${credentials}">
+					<div th:if="${#fields.hasGlobalErrors()}">
+						<p class="badge text-bg-danger my-2" th:each="err : ${#fields.globalErrors()}" th:text="${err}">
+							...</p>
 					</div>
-					
-					<!--Inserimento del Nome-->
-					<div class="mb-3">
-						<label class="form-label">Nome</label>
-						<input th:field="${user.nome}" type="text"  required class="form-control shadow">
-						<div class="badge text-bg-danger my-2" th:if="${#fields.hasErrors('user.nome')}" th:errors="${user.nome}"></div>				    
-					</div>
-					
-					<!--Inserimento del Cognome-->
-					<div class="mb-3">
-						<label class="form-label">Cognome</label>
-						<input th:field="${user.cognome}" type="text" required  class="form-control shadow">
-    				<div class="badge text-bg-danger my-2" th:if="${#fields.hasErrors('user.cognome')}" th:errors="${user.cognome}"></div>
-    				</div>
-    				
-    				<div class="mb-3">
-						<label class="form-label">Codice Fiscale</label>
-						<input th:field="${user.cF}" type="text" required  class="form-control shadow">
-    				<div class="badge text-bg-danger my-2" th:if="${#fields.hasErrors('user.cF')}" th:errors="${user.cF}"></div>
-    				</div>
-    				
-    				<div class="col-md-6">
+				</div>
+
+				<!--Inserimento del Nome-->
+				<div class="mb-3">
+					<label class="form-label">Nome</label>
+					<input th:field="${user.nome}" type="text" required class="form-control shadow">
+					<div class="badge text-bg-danger my-2" th:if="${#fields.hasErrors('user.nome')}"
+						th:errors="${user.nome}"></div>
+				</div>
+
+				<!--Inserimento del Cognome-->
+				<div class="mb-3">
+					<label class="form-label">Cognome</label>
+					<input th:field="${user.cognome}" type="text" required class="form-control shadow">
+					<div class="badge text-bg-danger my-2" th:if="${#fields.hasErrors('user.cognome')}"
+						th:errors="${user.cognome}"></div>
+				</div>
+
+				<div class="mb-3">
+					<label class="form-label">Codice Fiscale</label>
+					<input th:field="${user.cF}" type="text" required class="form-control shadow">
+					<div class="badge text-bg-danger my-2" th:if="${#fields.hasErrors('user.cF')}"
+						th:errors="${user.cF}"></div>
+				</div>
+
+				<div class="col-md-6">
 					<label for="user.dateOfBirth" class="form-label">Data di nascita</label>
-					<input class="form-control" required type="date" th:field="${user.dateOfBirth}" id="user.dateOfBirth" placeholder="dd/mm/yyyy"/>
+					<input class="form-control" required type="date" th:field="${user.dateOfBirth}"
+						id="user.dateOfBirth" placeholder="dd/mm/yyyy" />
 					<span th:if="${#fields.hasErrors('user.dateOfBirth')}" th:errors="${user.dateOfBirth}"></span>
 				</div>
-				
-				
+
+
 				<!--Sezione che riguarla la classe Site -->
 				<div class="col-12">
 					<label for="user.site.country" class="form-label">Regione</label>
-					<input class="form-control"  type="text" th:field="${user.site.country}" id="user.site.country"/>
+					<input class="form-control" type="text" th:field="${user.site.country}" id="user.site.country" />
 					<span th:if="${#fields.hasErrors('user.site.country')}" th:errors="${user.site.country}"></span>
 				</div>
-				
+
 				<div class="col-12">
 					<label for="user.site.city" class="form-label"> Città</label>
-					<input class="form-control" type="text" th:field="${user.site.city}" id="user.site.city"/>
+					<input class="form-control" type="text" th:field="${user.site.city}" id="user.site.city" />
 					<span th:if="${#fields.hasErrors('user.site.city')}" th:errors="${user.site.city}"></span>
 				</div>
-				
+
 				<div class="col-12">
 					<label for="user.site.cap" class="form-label"> Cap</label>
-					<input class="form-control" type="number" th:field="${user.site.cap}" id="user.site.cap"/>
+					<input class="form-control" type="number" th:field="${user.site.cap}" id="user.site.cap" />
 					<span th:if="${#fields.hasErrors('user.site.cap')}" th:errors="${user.site.cap}"></span>
 				</div>
-    				
-    				<!--Inserimento del Username-->
-    				<div class="mb-3">
-						<label class="form-label">Username</label>
-						<input th:field="${credentials.username}" type="text" required class="form-control shadow">
-					<div class="badge text-bg-danger my-2" th:if="${#fields.hasErrors('credentials.username')}" th:errors="${credentials.username}"></div>
-					</div>
 
-					<!--Inserimento della Password-->
-					<div class="mb-3">
-						<label class="form-label">Password</label>
-						<input th:field="${credentials.password}" type="password" required  class="form-control shadow">
+				<!--Inserimento del Username-->
+				<div class="mb-3">
+					<label class="form-label">Username</label>
+					<input th:field="${credentials.username}" type="text" required class="form-control shadow">
+					<div class="badge text-bg-danger my-2" th:if="${#fields.hasErrors('credentials.username')}" th:errors="${credentials.username}"></div>
+				</div>
+
+				<!--Inserimento della Password-->
+				<div class="mb-3">
+					<label class="form-label">Password</label>
+					<input th:field="${credentials.password}" type="password" required class="form-control shadow">
 					<div class="badge text-bg-danger my-2" th:if="${#fields.hasErrors('credentials.password')}" th:errors="${credentials.password}"></div>
-					</div>
-				
+				</div>
+
 				<button type="submit" class="mt-3 btn btn-primary shadow">Sign Up</button>
 			</form>
 		</div>
 	</div>
- 
- 
-	<footer th:replace="~{fragments/base :: footer}"><footer>
+
+
+	<footer th:replace="~{fragments/base :: footer}">
+		<footer>
 </body>
+
 </html>
