--- a/FIGMMA/src/main/resources/templates/team/teamAdd.html
+++ b/FIGMMA/src/main/resources/templates/team/teamAdd.html
@@ -1,73 +1,77 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="~{fragments/base :: head(title=Homepage)}">Hompage</head>
 
 <body>
 	<nav th:replace="~{fragments/base :: navbar}"></nav>
-	
+
 	<div class="d-flex container justify-content-center mt-4">
-		<div class="col-6 card border border-primary p-3 shadow" >	
+		<div class="col-6 card border border-primary p-3 shadow">
 			<!--Form per aggiungere un nuovo Team-->
 			<form th:action="@{/team/add}" method="POST" th:object="${team}" class="row g-3">
 				<div th:if="${#fields.hasGlobalErrors()}">
 					<p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
 				</div>
-				
+
 				<div class="col-md-6">
 					<label for="name" class="form-label">Nome</label>
-					<input class="form-control" required type="text" th:field="*{name}" id="name"/>
+					<input class="form-control" required type="text" th:field="*{name}" id="name" />
 					<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
 				</div>
-				
+
 				<div class="col-md-6">
 					<label for="dateOfCreation" class="form-label">Data di fondazione</label>
-					<input class="form-control" required type="date" th:field="*{dateOfCreation}" id="dateOfCreation" placeholder="dd/mm/yyyy"/>
+					<input class="form-control" required type="date" th:field="*{dateOfCreation}" id="dateOfCreation" placeholder="dd/mm/yyyy" />
 					<span th:if="${#fields.hasErrors('dateOfCreation')}" th:errors="*{dateOfCreation}"></span>
 				</div>
-				
+
 				<div class="col-md-4">
 					<label for="president" class="form-label">Secgli il presidente</label>
 					<select class="form-select" type="User" th:field="*{president}" name="president">
 						<div th:each="user : ${users}">
-							<option th:value="${user.id}" th:text="${user.nome} + ' ' +${user.cognome}">presidente</option>
+							<option th:value="${user.id}" th:text="${user.nome} + ' ' +${user.cognome}">presidente
+							</option>
 						</div>
 					</select>
 				</div>
-				
-				
+
+
 				<!--Sezione che riguarla la classe Site -->
 				<div class="col-12">
 					<label for="site.country" class="form-label">Regione</label>
-					<input class="form-control"  type="text" th:field="*{site.country}" id="site.country"/>
+					<input class="form-control" type="text" th:field="*{site.country}" id="site.country" />
 					<span th:if="${#fields.hasErrors('site.country')}" th:errors="*{site.country}"></span>
 				</div>
-				
+
 				<div class="col-12">
 					<label for="site.city" class="form-label"> Città</label>
-					<input class="form-control" type="text" th:field="*{site.city}" id="site.city"/>
+					<input class="form-control" type="text" th:field="*{site.city}" id="site.city" />
 					<span th:if="${#fields.hasErrors('site.city')}" th:errors="*{site.city}"></span>
 				</div>
-				
+
 				<div class="col-12">
 					<label for="site.cap" class="form-label"> Cap</label>
-					<input class="form-control" type="number" th:field="*{site.cap}" id="site.cap"/>
+					<input class="form-control" type="number" th:field="*{site.cap}" id="site.cap" />
 					<span th:if="${#fields.hasErrors('site.cap')}" th:errors="*{site.cap}"></span>
 				</div>
-				
+
 				<div class="col-12">
 					<label for="site.address" class="form-label"> Via</label>
-					<input class="form-control" type="text" th:field="*{site.address}" id="site.address"/>
+					<input class="form-control" type="text" th:field="*{site.address}" id="site.address" />
 					<span th:if="${#fields.hasErrors('site.address')}" th:errors="*{site.address}"></span>
 				</div>
-				
+
 				<div class="col-12">
 					<button type="submit" class="btn btn-primary">Add</button>
 				</div>
 			</form>
 		</div>
 	</div>
- 
- 
-	<footer th:replace="~{fragments/base :: footer}"><footer>
+
+
+	<footer th:replace="~{fragments/base :: footer}">
+		<footer>
 </body>
+
 </html>
