--- a/FIGMMA/src/main/resources/templates/athlete/athleteList.html
+++ b/FIGMMA/src/main/resources/templates/athlete/athleteList.html
@@ -17,7 +17,7 @@
 							<form th:action="@{/athlete/search}" method="POST" class="mb-3">
 								<div class="row">
 									<div class="col-md-4">
-										<select class="form-select" type"text" th:value="${type}" name="type">
+										<select class="form-select" type="text" th:value="${type}" name="type">
 											<option value="name">Nome</option>
 											<option value="surname">Cognome</option>
 											<option value="Team">Team</option>
