--- a/FIGMMA/src/main/resources/templates/team/teamList.html
+++ b/FIGMMA/src/main/resources/templates/team/teamList.html
@@ -16,7 +16,7 @@
 							<form th:action="@{/team/search}" method="POST" class="mb-3">
 								<div class="row">
 									<div class="col-md-4">
-										<select class="form-select" type"text" th:value="${type}" name="type">
+										<select class="form-select" type="text" th:value="${type}" name="type">
 											<option value="team">Team</option>
 											<option value="president">Presidente</option>
 										</select>
