--- a/FIGMMA/src/main/resources/templates/athlete/athleteProfile.html
+++ b/FIGMMA/src/main/resources/templates/athlete/athleteProfile.html
@@ -36,8 +36,32 @@
 
 			<!--solo per admin-->
 			<div sec:authorize="hasAuthority('ADMIN')">
-				<li class="list-group-item"><a th:href="@{'/athlete/edit/' + ${athlete.id}}" class="card-link">Edit athlete</a></li>
-				<li class="list-group-item"><a th:href="@{'/athlete/delete/' + ${athlete.id}}" class="card-link">Delete athlete</a></li>
+				<li class="list-group-item"><a th:href="@{'/athlete/edit/' + ${athlete.id}}" class="btn btn-primary card-link" type="button" >Edit athlete</a></li>
+				<li class="list-group-item">
+					<!-- Button trigger modal -->
+					<a type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"> Delete athlete </a>
+					<!-- Modal -->
+					<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h1 class="modal-title fs-5" id="exampleModalLabel">Elimina Team</h1>
+									<button type="button" class="btn-close" data-bs-dismiss="modal"
+										aria-label="Close"></button>
+								</div>
+								<div class="modal-body"
+									th:text="'Sicuro di voler eliminare lo sportivo ' +${athlete.name}">
+									...
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+									<a type="button" class="btn btn-primary"
+										th:href="@{'/athlete/delete/' + ${athlete.id}}">Si</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</li>
 			</div>
 		</ul>
 	</div>
