--- a/FIGMMA/src/main/resources/templates/athlete/athleteProfile.html
+++ b/FIGMMA/src/main/resources/templates/athlete/athleteProfile.html
@@ -50,7 +50,7 @@
 										aria-label="Close"></button>
 								</div>
 								<div class="modal-body"
-									th:text="'Sicuro di voler eliminare lo sportivo ' +${athlete.name}">
+									th:text="'Sicuro di voler eliminare l\'atleta ' + ${athlete.name}">
 									...
 								</div>
 								<div class="modal-footer">
