--- a/FIGMMA/src/main/resources/templates/athlete/athleteProfile.html
+++ b/FIGMMA/src/main/resources/templates/athlete/athleteProfile.html
@@ -7,7 +7,8 @@
 	<nav th:replace="~{fragments/base :: navbar}"></nav>
 
 	<div class="card mx-auto" style="width: 18rem;">
-		<img src="..." class="card-img-top" alt="...">
+		<img th:if="${athlete.pathImg != null}" th:src="@{'/images/athlete/' + ${athlete.pathImg}}" class="card-img-top" alt="...">
+		<img th:unless="${athlete.pathImg != null}" src="/images/athlete/athlete.jpg" class="card-img-top" alt="...">
 		<div class="card-body">
 			<h5 class="card-title" th:text="${athlete.name} + ' ' + ${athlete.surname}">Card title</h5>
 			<div th:if="${athlete.team == null}">
