--- a/FIGMMA/src/main/resources/templates/auth/registerForm.html
+++ b/FIGMMA/src/main/resources/templates/auth/registerForm.html
@@ -11,7 +11,7 @@
 			<h3 class="card-title m-2 d-flex justify-content-center">Sign up</h3>
 
 			<!--Inizio della form-->
-			<form th:action="@{/register}" method="post" class="m-3">
+			<form th:action="@{/register}" method="post" class="m-3" enctype="multipart/form-data">
 
 				<!--Controllo se ci sono problemi-->
 				<div th:object="${credentials}">
@@ -44,11 +44,17 @@
 						th:errors="${user.cF}"></div>
 				</div>
 
-				<div class="col-md-6">
+				<div class="mb-3">
 					<label for="user.dateOfBirth" class="form-label">Data di nascita</label>
 					<input class="form-control" required type="date" th:field="${user.dateOfBirth}"
 						id="user.dateOfBirth" placeholder="dd/mm/yyyy" />
 					<span th:if="${#fields.hasErrors('user.dateOfBirth')}" th:errors="${user.dateOfBirth}"></span>
+				</div>
+				
+				<!--Inserimento della foto-->
+				<div class="mb-3">
+					<label class="form-label" for="inputImg">Immagine di profilo</label>
+					<input type="file" class="form-control" id="inputImg" name="file">
 				</div>
 
 
