--- a/FIGMMA/src/main/resources/templates/team/teamEdit.html
+++ b/FIGMMA/src/main/resources/templates/team/teamEdit.html
@@ -8,7 +8,7 @@
 	<div class="d-flex container justify-content-center mt-4">
 		<div class="col-6 card border border-primary p-3 shadow" >	
 			<!--Form per aggiungere un nuovo Team-->
-			<form th:action="@{'/team/update/' + ${team.id}}" method="POST" th:object="${team}" class="row g-3">
+			<form th:action="@{'/team/update/' + ${team.id}}" method="POST" th:object="${team}" class="row g-3" enctype="multipart/form-data">
 				<div th:if="${#fields.hasGlobalErrors()}">
 					<p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
 				</div>
@@ -32,6 +32,12 @@
 							<option th:value="${user.id}" th:text="${user.nome} + ' ' +${user.cognome}">presidente</option>
 						</div>
 					</select>
+				</div>
+				
+				<!--Inserimento della foto-->
+				<div class="mb-3">
+					<label class="form-label" for="file">Immagine di profilo</label>
+					<input type="file" class="form-control" id="inputImg" name="file">
 				</div>
 				
 				<!--Sezione che riguarla la classe Site -->
