--- a/FIGMMA/src/main/resources/templates/user/genericUser/genericUserProfile.html
+++ b/FIGMMA/src/main/resources/templates/user/genericUser/genericUserProfile.html
@@ -8,7 +8,7 @@
 
 	<div class="card mx-auto" style="width: 18rem;">
 		<img th:if="${user.pathImg != null}" th:src="@{'/images/profile/' + ${user.pathImg}}" class="card-img-top" alt="...">
-		<img th:unless="${user.pathImg != null}" src="/images/profile/profile.jpg" class="card-img-top" alt="...">
+		<img th:unless="${user.pathImg != null}" src="/images/preset/profile.jpg" class="card-img-top" alt="...">
 
 		<div class="card-body">
 			<h5 class="card-title" th:text="${user.nome} + ' ' + ${user.cognome}">Card title</h5>
