--- a/FIGMMA/src/main/resources/templates/fragments/base.html
+++ b/FIGMMA/src/main/resources/templates/fragments/base.html
@@ -14,7 +14,9 @@
 	<nav th:fragment="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
 		<div class="container-fluid">
 			<!--Icona-->
-			<a class="navbar-brand" href="/">FIGMMA</a>
+			<a class="navbar-brand" href="/">
+				<img src="/icon/figmma.jpg" alt="Bootstrap" width="120" height="40">
+			</a>
 			<!--Botton collapse-->
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
