--- a/FIGMMA/src/main/resources/templates/team/teamEditAthletes.html
+++ b/FIGMMA/src/main/resources/templates/team/teamEditAthletes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragments/base :: head(title='Modifica composizione team'')}">Hompage</head>
+<head th:replace="~{fragments/base :: head(title='Modifica composizione team')}">Hompage</head>
 
 <body>
 	<nav th:replace="~{fragments/base :: navbar}"></nav>
