--- a/FIGMMA/src/main/resources/templates/index.html
+++ b/FIGMMA/src/main/resources/templates/index.html
@@ -20,22 +20,19 @@
 			<div class="carousel-item active">
 				<img src="/carousel/1.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>First slide label</h5>
-					<p>Some representative placeholder content for the first slide.</p>
+					<h5>La vera vittoria non è solo sul tappeto, ma anche nell'essere la migliore versione di te stesso, dentro e fuori dall'anello</h5>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img src="/carousel/2.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>Second slide label</h5>
-					<p>Some representative placeholder content for the second slide.</p>
+					<h5>Ogni allenamento è un'opportunità per superare i tuoi limiti e migliorare te stesso</h5>
 				</div>
 			</div>
 			<div class="carousel-item">
 				<img src="/carousel/3.jpg" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
-					<h5>Third slide label</h5>
-					<p>Some representative placeholder content for the third slide.</p>
+					<h5>La M.M.A. insegna più di combattimento; insegna disciplina, determinazione e resilienza per affrontare qualsiasi sfida nella vita</h5>
 				</div>
 			</div>
 		</div>
